fixed bugs series, legend, scrollbar and zoom

--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,22 @@
-body {
+.body {
 	padding: 40px 120px;
 	/* black theme */
-	background-color: #222;
-	color: #fff;
+	/* background-color: #222;
+	color: #fff; */
 	/* white theme */
-	/* background-color: #F3F3FB; */
-	/* color: #000; */
+	background-color: #F3F3FB;
+	color: #000;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 12px;
 	line-height: 1.333;
 	box-sizing: border-box;
 }
+
+.body-black {
+	background-color: #222;
+	color: #fff;
+}
+
 .card {
 	display: inline-block;
 	width: 100%;
@@ -18,12 +24,16 @@ body {
 	border-radius: 32px;
 	padding: 24px 34px;
 	/* black theme */
-	background: rgba(37, 36, 51, 0.8);
+	/* background: rgba(37, 36, 51, 0.8); */
 	/* white theme */
-	/* background: rgba(255, 255, 255, 0.4); */
+	background: rgba(255, 255, 255, 0.4);
 	backdrop-filter: blur(64px);
 	/* background-color: #fff; */
 }
+.card-black {
+	background: rgba(37, 36, 51, 0.8);
+}
+
 .card-small {
 	width: 70%;
 	margin-bottom: 40px;
@@ -53,6 +63,14 @@ body {
 
 .legend {
 	border: 1px solid #fff;
+}
+.test {
+	display: inline-block;
+	font-size: 48px;
+	padding: 10px 30px;
+	color: #fff;
+	cursor: pointer;
+	background: #000;
 }
 
 
